# MellowPlayer

./: .clang-format  .github_changelog_generator  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  MellowPlayer-project.sublime-workspace  MellowPlayer.pro  README.md  README.rst  Thumbs.db  appveyor.yml  bootstrap.py  devhelper.py  devtool.py  freeze.py  index.html  mellowplayer.pro  mellowplayer.qbs  params.json  pyuic.cfg  run.py  setup.py
lib/Infrastructure/: CMakeLists.txt  Logging.hpp  System.hpp
lib/Infrastructure/Logging/: SpdLogger.cpp  SpdLogger.hpp  SpdLoggerFactory.hpp
lib/Infrastructure/System/: FileHelper.hpp
lib/MellowPlayer/Application/: BuildConfig.hpp  BuildConfig.in  CMakeLists.txt  ICommandLineParser.hpp  IFileDownloader.cpp  IFileDownloader.hpp  IMainWindow.hpp  IQtApplication.cpp  IQtApplication.hpp  IWorkDispatcher.hpp  TimeLimits.hpp  application.qrc  use-cases.qrc
lib/MellowPlayer/Domain/: BoostDIFactory.hpp  BuildConfig.hpp  BuildConfig.in  CMakeLists.txt  ICommandLineParser.hpp  IDeprecatedMainWindow.hpp  IDeprecatedQtApplication.cpp  IDeprecatedQtApplication.hpp  IFileDownloader.cpp  IFileDownloader.hpp  IMainWindow.hpp  IQtApplication.cpp  IQtApplication.hpp  IWorkDispatcher.hpp  Macros.hpp  Properties.hpp  domain.qrc
lib/MellowPlayer/Infrastructure/: AlbumArtDownloader.cpp  AlbumArtDownloader.hpp  ApplicationSettings.cpp  ApplicationSettings.hpp  Base64Helper.cpp  Base64Helper.hpp  BuildConfig.hpp  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  FileDownloader.cpp  FileDownloader.hpp  Hotkeys.cpp  Hotkeys.hpp  MprisMediaPlayer.cpp  MprisMediaPlayer.hpp  PluginLoader.cpp  PluginLoader.hpp  Plugins.hpp  System.hpp  (+9 more)
lib/entities/: CMakeLists.txt  Entities.hpp  Song.cpp  Song.hpp
src/: CMakeLists.txt  DI.hpp  Program.cpp  Program.hpp  README.md  main.cpp  main.qbs  main.qrc  qtquickcontrols2.conf  src.pro  src.qbs  tools.qbs
src/app/: MellowPlayer.rc  app.pro  application.cpp  dlg_preferences.ui  dlg_select_service.ui  dlgpreferences.cpp  dlgpreferences.h  dlgselectservice.cpp  dlgselectservice.h  icons.cpp  icons.h  keysequenceedit.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mellowplayer.qrc  pluginsmanager.h  webview.h
src/entities/: README.md
src/imports/: CMakeLists.txt  README.md  UpdateImports.cmake  imports.qrc
src/infrastructure/: README.md
src/languages/: MellowPlayer_ca.qm  MellowPlayer_ca.ts  MellowPlayer_de.qm  MellowPlayer_de.ts  MellowPlayer_de_DE.qm  MellowPlayer_de_DE.ts  MellowPlayer_en.qm  MellowPlayer_en.ts  MellowPlayer_en_US.qm  MellowPlayer_en_US.ts  MellowPlayer_es.qm  MellowPlayer_es.ts  MellowPlayer_es_ES.ts  MellowPlayer_fi.qm  MellowPlayer_fi.ts  MellowPlayer_fr.qm  MellowPlayer_fr.ts  MellowPlayer_fr_FR.qm  MellowPlayer_fr_FR.ts  languages.qrc
src/lib/: README.md  lib.pro  lib.qbs
src/main/: CMakeLists.txt  DI.hpp  MellowPlayer.rc  Program.cpp  Program.hpp  main.cpp  main.qbs  main.qml  qml.qrc  qtquickcontrols2.conf
src/mellowplayer/: main.cpp  mainwindow.cpp  mellowplayer.pro  player.cpp
src/plugins/: CMakeLists.txt  plugins.pro  plugins.qbs
src/presentation/: README.md
src/qml/: main.qml
src/tests/: CMakeLists.txt
src/use-cases/: README.md
tests/: CMakeLists.txt  DI.hpp  main.cpp  stdafx.h  stdafx.hpp  tests.qbs
tests/Entities/: NotificationTests.cpp  PluginMetadataTests.cpp  PluginScriptTests.cpp  PluginTests.cpp  SongTests.cpp  StreamingServicesTests.cpp
tests/Infrastructure/: AlbumArtDownloaderTests.cpp  ApplicationSettingsTests.cpp  HotkeysTests.cpp  MprisMediaPlayerTests.cpp  PluginLoaderTests.cpp  StreamingServicesLoaderTests.cpp
tests/IntegrationTests/: AlbumArtDownloaderTests.cpp  ApplicationSettingsTests.cpp  ClipBoardViewModelTests.cpp  IconProviderTests.cpp  LibnotifyPresenterTests.cpp  MainWindowModelTests.cpp  MainWindowViewModelTests.cpp  PluginLoaderTests.cpp  QSettingsProviderTests.cpp  QmlMainWindowTests.cpp  QtConcurrentWorkDispatcherTests.cpp  SettingsTests.cpp  SingleInstanceApplicationTests.cpp  SqlLiteListeningHistoryDataProviderTests.cpp  StreamingServiceCreatorTests.cpp  StreamingServiceLoaderLoaderTests.cpp  StreamingServiceLoaderTests.cpp  StreamingServiceWatcherTests.cpp  SystemTrayIconPresenterTests.cpp  SystemTrayIconTests.cpp  integrationtests.qbs
tests/Lib/: CMakeLists.txt  Lib.qbs  TestLib.qbs  TestMacros.hpp  TestsRunner.cpp  stdafx.h  stdafx.hpp
tests/Mocks/: AlbumArtDownloaderMock.hpp  ApplicationMock.hpp  ApplicationSettingsMock.cpp  ApplicationSettingsMock.hpp  CommnanLineParserMock.hpp  CommnandLineParserMock.hpp  FakeFileDownloader.hpp  FakeHttpClient.cpp  FakeHttpClient.hpp  FakePlatformUpdater.hpp  FakeWorkDispatcher.hpp  HotkeysServiceMock.hpp  InMemoryListeningHistoryDataProvider.hpp  LocalAlbumArtMock.hpp  LocalAlbumArtServiceMock.hpp  MainWindowMock.hpp  MprisServiceMock.hpp  NotificationPresenterMock.hpp  NotificationServiceMock.hpp  NotifierMock.hpp  PlayerMock.cpp  PlayerMock.hpp  PluginLoaderMock.cpp  PluginLoaderMock.hpp  QtApplicationMock.hpp  SettingsProviderMock.cpp  SettingsProviderMock.hpp  StreamingServiceCreatorMock.hpp  StreamingServiceLoaderMock.cpp  StreamingServiceLoaderMock.hpp  StreamingServiceWatcherMock.hpp  StyleLoaderMock.hpp  SystemTrayIconMock.hpp  ThemeLoaderMock
tests/MprisTests/: Mpris2PlayerTests.cpp  Mpris2RootTests.cpp  MprisServiceTests.cpp
tests/Presentation/: IconProviderTests.cpp  QmlMainWindowIntegrationTests.cpp  SystemTrayIconTests.cpp
tests/UnitTests/: unittests.qbs
tests/UseCases/: LocalAlbumArtTests.cpp  LoggingManagerTests.cpp  PlayerProxyTests.cpp  PlayerTests.cpp  PluginManagerTests.cpp  PluginScriptTests.cpp  PluginTests.cpp  StreamingServicesManagerTests.cpp  StreamingServicesTests.cpp
tests/Utils/: DependencyFactory.cpp  DependencyFactory.hpp  DependencyPool.cpp  DependencyPool.hpp  Helpers.cpp  Helpers.hpp
tests/entities/: README.md  SongTests.cpp
tests/infrastructure/: README.md
tests/presentation/: README.md
tests/use-cases/: README.md
(+2366 files in other folders)
